# AutoApply.AI

./: .gitignore  README.md  pyproject.toml  run_server.py
app/: main.py  schemas.py
app/api/: jobs.py  resume.py
frontend/: index.html
modules/: resume_improver.py
modules/implementations/: html_pdf_generator.py  langchain_resume_optimizer.py  playwright_job_scraper.py  pypdf_processor.py
modules/interfaces/: document_generator.py  job_scraper.py  pdf_processor.py  resume_optimizer.py
static/styles/: resume.css
templates/: resume_template.html
tests/integration/: test_resume_api.py
tests/unit/: test_pdf_processor.py  test_resume_optimizer.py
